icecast2 (2.3.1-2) unstable; urgency=low

  * This package is now team-maintained!
    + Debian Icecast team <pkg-icecast-devel@lists.alioth.debian.org>
      maintains the package, with me as uploader.
    + If you want to help improve the package or want other Icecast-
      related packages maintained here then drop an email to the above
      mailinglist!

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Dec 2005 21:41:55 +0100

icecast2 (2.3.1-1) unstable; urgency=low

  * New upstream release. Closes: bug#343613 (thanks to Alexander
    Schories <alexander@schories.com>).
  * Debian subdir is again stripped from tarball.
  * Mention homepage (not website) in long description.
  * Depend on adduser (thanks to lintian).
  * Add local cdbs snippet copyright-check.mk.
  * Update debian/copyright to quote less of GPL licenses - to avoid
    lintian complaining about wrong FSF address.

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 16 Dec 2005 23:08:50 +0100

icecast2 (2.3.0-2) unstable; urgency=low

  * Build-depend on libcurl3-gnutls-dev (not libcurl-dev) to avoid
    indirectly linking against GPL-unfriendly openssl. This also closes:
    bug#335891 (thanks to Chris Murton <chris@areti.net>).

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 27 Oct 2005 00:17:54 +0200

icecast2 (2.3.0-1) unstable; urgency=low

  * New upstream release. Closes: bug#332323 (thanks to  Jesus Climent
    <jesus.climent@hispalinux.es>).
  * Debian subdir is again stripped from tarball.
  * Bump up watch file version.
  * Build-depend on libspeex-dev.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 13 Oct 2005 09:54:54 +0200

icecast2 (2.2.0-3) unstable; urgency=low

  * Raise to standards version 3.6.2 (no changes needed).
  * Use cdbs debian/control auto-build, but only when environment
    includes DEB_BUILD_OPTIONS=update.
  * Auto-update build-dependencies (and manually rip out build-essential
    buggily sneaking in).
  * Fix watch file by simplifying it (seems uscan wrongly parse it as a