@@ -1,6 +1,15 @@
 # -*- mode: makefile; coding: utf-8 -*-
-# Copyright © 2004-2005 Jonas Smedegaard <dr@jones.dk>
-# Description: Generate and include build information
+# Copyright © 2005 Jonas Smedegaard <dr@jones.dk>
+# Description: Auto-update debian/control from debian/control.in
+#  When the environment variable DEB_BUILD_OPTIONS contains the magic
+#  string "update" the clean target is extended to auto-update
+#  debian/control from debian/control.in where build-depends can contain
+#  the magic string @cdbs@ expanded to build-dependencies known to cdbs,
+#  and more...
+#
+#  In other words, with this in use don't edit debian/control directly,
+#  but instead edit debian/control.in and invoke the following:
+#    DEB_BUILD_OPTIONS=update fakeroot debian/rules clean
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -17,26 +26,19 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 # 02111-1307 USA.
 
-
 ifndef _cdbs_bootstrap
 _cdbs_scripts_path ?= /usr/lib/cdbs
 _cdbs_rules_path ?= /usr/share/cdbs/1/rules
 _cdbs_class_path ?= /usr/share/cdbs/1/class
 endif
 
-ifndef _cdbs_rules_buildinfo
-_cdbs_rules_buildinfo := 1
+ifndef _cdbs_rules_auto-update
+_cdbs_rules_auto-update := 1
+
+ifneq (,$(findstring update,$(DEB_BUILD_OPTIONS)))
+DEB_AUTO_UPDATE_DEBIAN_CONTROL := yes
+endif
 
 include $(_cdbs_rules_path)/buildcore.mk$(_cdbs_makefile_suffix)
-
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), dh-buildinfo
-
-common-install-arch common-install-indep:: debian/stamp-buildinfo
-
-debian/stamp-buildinfo:
-	dh_buildinfo
-
-clean::
-	rm -f debian/stamp-buildinfo
 
 endif
